# frontier_gpu_programming_models_examples

./: .gitignore  README.md
HIP/: README.md
HIP/no_mpi/: CMakeLists.txt  Makefile  Makefile.hipcc  README.md  build_cmake.sh  build_make.sh  submit.sbatch  vAdd_hip.cpp  vAdd_hip.hip
HIP/no_mpi/hipblas_example/: CMakeLists.txt  Makefile  Makefile.hipcc  build_cmake.sh  build_make.sh  cpu_gpu_dgemm.hip  submit.sbatch
HIP/with_mpi/: CMakeLists.txt  Makefile  Makefile.hipcc  README.md  build_cmake.sh  build_make.sh  submit.sbatch  vAdd_hip.cpp  vAdd_hip.hip
HIP/with_mpi/hipblas_example/: CMakeLists.txt  Makefile.hipcc  build_cmake.sh  build_make.sh  cpu_gpu_dgemm.cpp  submit.sbatch
Kokkos/: CMakeLists.txt  Makefile  README.md  build_cmake.sh  build_make.sh
Kokkos/no_mpi/: README.md
Kokkos/no_mpi/intree_build/: CMakeLists.txt  Makefile  README.md  build_cmake.sh  build_make.sh  kokkos_example.cpp  submit.sbatch
Kokkos/no_mpi/module_build/: CMakeLists.txt  README.md  build_cmake.sh  kokkos_example.cpp  submit.sbatch
Kokkos/with_mpi/: README.md
Kokkos/with_mpi/intree_build/: CMakeLists.txt  Makefile  README.md  build_cmake.sh  build_make.sh  submit.sbatch
Kokkos/with_mpi/module_build/: CMakeLists.txt  README.md  build_cmake.sh  kokkos_example.cpp  submit.sbatch
openmp_offload/: README.md
openmp_offload/no_mpi/: CMakeLists.txt  Makefile.hipcc  README.md  build_cmake.sh  build_make.sh  cmakeamdrun  cmakecrayrun  crayrun  hipccrun  jacobi.c  submit.sbatch
openmp_offload/no_mpi/jacobi/: CMakeLists.txt  Makefile  Makefile.gnu  Makefile.hipcc  build_cmake.sh  build_make.sh
openmp_offload/no_mpi/vecadd/: CMakeLists.txt  Makefile  Makefile.hipcc  build_cmake.sh  build_make.sh  vecadd.cpp
openmp_offload/with_mpi/: CMakeLists.txt  Makefile  Makefile.hipcc  README.md  build_cmake.sh  build_make.sh  jacobi.c  submit.sbatch
