cmake_minimum_required (VERSION 3.23)
project (jacobi)

find_package(OpenMP REQUIRED)
add_executable(jacobi jacobi.c)
if(OpenMP_C_FOUND)
    set(OpenMP_C_FLAGS "${OpenMP_C_FLAGS} --target=x86_64-pc-linux-gnu -fopenmp-targets=amdgcn-amd-amdhsa -Xopenmp-target=amdgcn-amd-amdhsa -march=gfx90a")
    set(OpenMP_CXX_FLAGS "${OpenMP_CXX_FLAGS} --target=x86_64-pc-linux-gnu -fopenmp-targets=amdgcn-amd-amdhsa -Xopenmp-target=amdgcn-amd-amdhsa -march=gfx90a")
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -craype-verbose ${OpenMP_C_FLAGS}")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -craybe-verbose ${OpenMP_CXX_FLAGS}")
    message(NOTICE "OPENMP_C_FLAGS=${OpenMP_C_FLAGS}")
    message(NOTICE "OPENMP_CXX_FLAGS=${OpenMP_CXX_FLAGS}")
    target_link_libraries(jacobi PUBLIC OpenMP::OpenMP_C)
endif()
