cmake_minimum_required (VERSION 3.23)
project (jacobi)

find_package(OpenMP REQUIRED)
add_executable(jacobi jacobi.c)
if(OpenMP_C_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    if("${CMAKE_C_COMPILER}" MATCHES "bin/hipcc")
      set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -v -fopenmp -target x86_64-pc-linux-gnu -fopenmp-targets=amdgcn-amd-amdhsa -Xopenmp-target=amdgcn-amd-amdhsa -march=gfx90a")
      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -v -fopenmp -target x86_64-pc-linux-gnu -fopenmp-targets=amdgcn-amd-amdhsa -Xopenmp-target=amdgcn-amd-amdhsa -march=gfx90a")
    endif()
endif()
