cmake_minimum_required (VERSION 3.23)
project (jacobi)

find_package(OpenMP REQUIRED)
add_executable(jacobi jacobi.c)
if(OpenMP_C_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    if("${CMAKE_C_COMPILER}" MATCHES "bin/hipcc")
      set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp -target x86_64-pc-linux-gnu -fopenmp-targets=amdgcn-amd-amdhsa -Xopenmp-target=amdgcn-amd-amdhsa -march=gfx90a")
      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -target x86_64-pc-linux-gnu -fopenmp-targets=amdgcn-amd-amdhsa -Xopenmp-target=amdgcn-amd-amdhsa -march=gfx90a")
    endif()
endif()

# We have to do explicit steps for hipcc that we wouldn't for cc, because the cc
# compiler wrapper automatically adds the necessary MPI flags.
if("${CMAKE_C_COMPILER}" MATCHES "bin/hipcc")
 find_package(MPI)
 if(MPI_C_FOUND)
  message("MPI C Flags: ${MPI_C_LIBRARIES} ${MPI_C_INCLUDE_DIRS} ${MPI_C_LINK_FLAGS}")
  set(MPICH_GTL_DIR "$ENV{PE_MPICH_GTL_DIR_amd_gfx90a}")
  set(MPICH_GTL_LIBS "$ENV{PE_MPICH_GTL_LIBS_amd_gfx90a}")
  set(XPMEM_LIBS "$ENV{CRAY_XPMEM_POST_LINK_OPTS} -lxpmem")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}  ${XPMEM_LIBS} ${MPICH_GTL_DIR} ${MPICH_GTL_LIBS}")
  target_link_libraries(jacobi MPI::MPI_C)
 else()
  message("MPI_C_FOUND is false, so need to set MPI flags manually")
 endif()
endif()	
